{
    "name": "Input Controls",
    "maps": [
        {
            "name": "Player",
            "id": "f4b66115-e18a-45c5-b198-8f5b3125943d",
            "actions": [
                {
                    "name": "Mouse Scroll",
                    "type": "PassThrough",
                    "id": "5696767d-887b-4427-ae28-21c333e7ac63",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Hold",
                    "type": "Button",
                    "id": "2235648f-91d4-479a-a0f5-f4491528fed2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PrimaryTouchContact",
                    "type": "Button",
                    "id": "8644e9ab-a9fe-4edc-9e77-45e5d39fc6da",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "PrimaryFingerPosition",
                    "type": "Value",
                    "id": "115520f9-56ab-4c5d-9b24-e884466a9cdd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondaryTouchContact",
                    "type": "Button",
                    "id": "8f55ac01-02c9-4616-abd0-9c423049e67d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "SecondaryFingerPosition",
                    "type": "Value",
                    "id": "23ddbf27-a624-4d3e-b1c7-96d213be3dfe",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4f628bba-c809-4cca-8cf0-43420dee9d49",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse And Keyboard",
                    "action": "Mouse Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "820691f3-39d5-4aaa-94bd-90c2ad7a4736",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse And Keyboard",
                    "action": "PrimaryFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62287713-61d8-4b93-b993-36dbae666736",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "PrimaryFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b628c219-8f4e-4622-8acd-aebb4f501885",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "SecondaryFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d68e328-6f90-4748-bb6a-14dbfba8e85b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold(duration=0.15)",
                    "processors": "",
                    "groups": "Mouse And Keyboard",
                    "action": "Hold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9c3e938-3ada-426d-929c-ebe693822643",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "Hold(duration=0.15)",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "Hold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bce20dae-e4b9-4159-b2a4-e4cadf25706d",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "PrimaryTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f8e1fcf1-b832-4178-be53-df4f8f8930a2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse And Keyboard",
                    "action": "PrimaryTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0acc2b1f-1eec-4f2e-a84d-a5ac1f6351be",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "SecondaryTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse And Keyboard",
            "bindingGroup": "Mouse And Keyboard",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touchscreen",
            "bindingGroup": "Touchscreen",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}